syntax = "proto3";

import "dhfs_objects_serial.proto";

option java_multiple_files = true;
option java_package = "com.usatiuk.dhfs.objects.repository";
option java_outer_classname = "DhfsObjectSyncApi";

package dhfs.objects.sync;

service DhfsObjectSyncGrpc {
  rpc GetObject (GetObjectRequest) returns (GetObjectReply) {}
  rpc GetIndex (GetIndexRequest) returns (GetIndexReply) {}
  rpc IndexUpdate (IndexUpdatePush) returns (IndexUpdateReply) {}

  rpc CanDelete (CanDeleteRequest) returns (CanDeleteReply) {}
  rpc ConfirmPushedMove (ConfirmPushedMoveRequest) returns (ConfirmPushedMoveReply) {}

  rpc Ping (PingRequest) returns (PingReply) {}
}

message PingRequest {
  string selfUuid = 1;
}

message PingReply {
  string selfUuid = 1;
}

message ObjectChangelogEntry {
  string host = 1;
  uint64 version = 2;
}

message ObjectChangelog {
  repeated ObjectChangelogEntry entries = 1;
}

message ObjectHeader {
  string name = 2;
  ObjectChangelog changelog = 5;
  optional dhfs.objects.persistence.JObjectDataP pushedData = 6;
}

message ApiObject {
  ObjectHeader header = 1;
  dhfs.objects.persistence.JObjectDataP content = 2;
}

message GetObjectRequest {
  string selfUuid = 10;

  string name = 2;
  bool forConflict = 3;
}

//FIXME:
message PushedMove {
  ObjectHeader parent = 1;
  string kid = 2;
}

message PushedMoves {
  repeated PushedMove pushedMoves = 2;
}

message GetObjectReply {
  string selfUuid = 10;

  optional ApiObject object = 1;
  optional PushedMoves pushedMoves = 2;
}

message PushedMoveConfirm {
  string parent = 1;
  string kid = 2;
}

message ConfirmPushedMoveRequest {
  string selfUuid = 10;

  repeated PushedMoveConfirm confirmedMoves = 1;
}

message ConfirmPushedMoveReply {

}

message CanDeleteRequest {
  string selfUuid = 10;

  string name = 2;
  repeated string ourReferrers = 3;
}

message CanDeleteReply {
  string selfUuid = 10;
  string objName = 1;
  bool deletionCandidate = 2;
  repeated string referrers = 3;
}

message GetIndexRequest {
  string selfUuid = 10;
}

message GetIndexReply {}

message IndexUpdatePush {
  string selfUuid = 10;

  ObjectHeader header = 1;
}

message IndexUpdateReply {}